--- a/artushima-web/src/app/my-campaigns/components/campaign-details/in-game-time-info/in-game-time-info.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/in-game-time-info/in-game-time-info.component.html
@@ -6,22 +6,26 @@
 
     <div class="row">
 
-      <!-- Begin date -->
+      <!-- Start date -->
       <div class="col-lg-4 text-center">
         <span>Data początku kampanii:</span><br>
-        <span class="font-weight-bold" id="in-game-time-info_begin-date">{{ beginDate | date:'dd.MM.yyyy' }}</span>
+        <span
+          class="font-weight-bold"
+          id="campaign-details__in-game-time-info__startDate">{{ startDate | date:'dd.MM.yyyy' }}</span>
       </div>
 
       <!-- Passed days -->
       <div class="col-lg-4 text-center">
         <span>Minione dni:</span><br>
-        <span class="font-weight-bold" id="in-game-time-info_passed-days">{{ passedDays }}</span>
+        <span class="font-weight-bold" id="campaign-details__in-game-time-info__passedDays">{{ passedDays }}</span>
       </div>
 
       <!-- Current date -->
       <div class="col-lg-4 text-center">
         <span>Obecna data:</span><br>
-        <span class="font-weight-bold" id="in-game-time-info_current-date">{{ currentDate | date:'dd.MM.yyyy' }}</span>
+        <span
+          class="font-weight-bold"
+          id="campaign-details__in-game-time-info__currentDate">{{ currentDate | date:'dd.MM.yyyy' }}</span>
       </div>
 
     </div>
