integrate the component for campaign details with the adapter

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -5,7 +5,7 @@
     <div class="col">
       <artushima-header
         [icon]="iconBook"
-        [title]="'Kampania Testowa'"
+        [title]="(campaignDetails$ | async)?.title"
         [titleId]="'campaign-details__campaignTitle'">
       </artushima-header>
     </div>
@@ -15,9 +15,9 @@
   <div class="row pb-4">
     <div class="col">
       <artushima-campaign-details-campaign-info
-        [id]="1"
-        [creationDate]="'2020-01-01'"
-        [gameMasterName]="'Test MG'">
+        [id]="(campaignDetails$ | async)?.id"
+        [creationDate]="(campaignDetails$ | async)?.creationDate"
+        [gameMasterName]="(campaignDetails$ | async)?.gameMasterName">
       </artushima-campaign-details-campaign-info>
     </div>
   </div>
@@ -26,9 +26,9 @@
   <div class="row pt-2 pb-2">
     <div class="col">
       <artushima-campaign-details-in-game-time-info
-        [startDate]="'2053-11-18'"
-        [passedDays]="10"
-        [currentDate]="'2053-11-28'">
+        [startDate]="(campaignDetails$ | async)?.startDate"
+        [passedDays]="(campaignDetails$ | async)?.passedDays"
+        [currentDate]="(campaignDetails$ | async)?.currentDate">
       </artushima-campaign-details-in-game-time-info>
     </div>
   </div>
