implement the form for timeline-entry-editor.component

--- a/artushima-web/src/app/my-campaigns/components/timeline-entry-editor/timeline-entry-editor.component.html
+++ b/artushima-web/src/app/my-campaigns/components/timeline-entry-editor/timeline-entry-editor.component.html
@@ -1,1 +1,67 @@
-<p>timeline-entry-editor works!</p>
+<div class="container">
+
+  <!-- Header -->
+  <div class="row pb-2">
+    <div class="col">
+      <artushima-header [title]="'Podsumowanie sesji'" [icon]="iconSummarizeSession"></artushima-header>
+    </div>
+  </div>
+
+  <!-- Form -->
+  <form [formGroup]="entryFormGroup" (ngSubmit)="onSubmit()">
+    <div class="row pb-2">
+
+      <!-- Field: Title -->
+      <div class="col-xs-12 col-md-8">
+        <div class="row">
+          <div class="col">
+            <label class="form-label" for="input-title">Tytuł</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <input id="input-title" class="form-control" type="text" formControlName="title">
+          </div>
+        </div>
+      </div>
+
+      <!-- Field: Session Date -->
+      <div class="col-xs-12 col-md-4">
+        <div class="row">
+          <div class="col">
+            <label class="form-label" for="input-session-date">Data</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <input id="input-session-date" class="form-control" type="date" formControlName="sessionDate">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row pb-2">
+      <!-- Field: Summary Text -->
+      <div class="col-12">
+        <div class="row">
+          <div class="col">
+            <label class="form-label" for="textarea-summary-text">Podsumowanie</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <textarea id="textarea-summary-text" class="form-control" rows="15"
+              formControlName="summaryText"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row pb-2">
+      <!-- Button Submit -->
+      <div class="col-xs-12 col-md-3 offset-md-9">
+        <button class="btn btn-primary btn-block" type="submit" [disabled]="!entryFormGroup.valid">Zapisz</button>
+      </div>
+    </div>
+  </form>
+</div>
