--- a/artushima-web/src/app/my-campaigns/components/timeline-entry-editor/timeline-entry-editor.component.html
+++ b/artushima-web/src/app/my-campaigns/components/timeline-entry-editor/timeline-entry-editor.component.html
@@ -3,7 +3,8 @@
   <!-- Header -->
   <div class="row pb-2">
     <div class="col">
-      <artushima-header [title]="'Podsumowanie sesji'" [icon]="iconSummarizeSession"></artushima-header>
+      <artushima-header [title]="'Podsumowanie sesji'" [icon]="iconConfig.myCampaigns.timelineEntryEditorHeaderIcon">
+      </artushima-header>
     </div>
   </div>
 
