--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-gm-toolbar/campaign-gm-toolbar.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-gm-toolbar/campaign-gm-toolbar.component.html
@@ -6,7 +6,7 @@
         <div class="col-12 col-md-3">
           <button class="btn btn-primary btn-block" [routerLink]="[createTimelineEntryURL]">
             <span class="pr-2">
-              <fa-icon [icon]="iconSummarizeSession"></fa-icon>
+              <fa-icon [icon]="iconConfig.myCampaigns.campaignGmToolbarSummarizeSessionIcon"></fa-icon>
             </span>
             <span>Podsumuj sesjię</span>
           </button>
