implement basics of campaign timeline

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -53,7 +53,8 @@
   <!-- Campaign timeline -->
   <div class="row pt-2 pb-2">
     <div class="col">
-      <artushima-campaign-details-campaign-timeline> </artushima-campaign-details-campaign-timeline>
+      <artushima-campaign-details-campaign-timeline [timeline]="campaignTimeline$ | async">
+      </artushima-campaign-details-campaign-timeline>
     </div>
   </div>
 </div>
